moddified the index navbar delete

--- a/index.html
+++ b/index.html
@@ -12,13 +12,7 @@
 <body>
     <div class="container">
         <div class="navbar">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="https://github.com/Shubham-05052000">shubham-05052000</a></li>
-                <li><a href="https://www.linkedin.com/in/shubham-shrivastav-2419001ab">Linkedin</a></li>
-                <li><a href="">about</a></li>
-                <li><a href="mailto:shubhamshrivastav778@gmail.com">Contact Us</a></li>
-            </ul>
+            <a href="https://github.com/Shubham-05052000"><h1>Created by Shubham</h1></a>
         </div>
         <img src="./images/shubham.jpeg" alt="">
         <div class="card">
